[package]
name = "breakfast_club_nft"
authors = ["bradlet"]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/bradlet/breakfast_club_nft"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "breakfast_club_nft"
crate-type = ["cdylib", "rlib"]

[dependencies]
solana-program = "1.11.2"
borsh = "0.9.3"
borsh-derive = "0.9.1"
